--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -22,6 +22,15 @@ body {
   background-size: 50%;
   opacity: .8;
 }
+.caja{
+  padding: 10px;
+  border: 2px solid black;
+  border-radius: 5px;
+  /* color: #ffffff; */
+  /* background-color: rgb(29, 71, 99); */
+  margin: 1.5px;
+}
+
 button{
   margin: 10px;
   transform: scale(100%);
